--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img src="./img/right.png" class="right-img">
     <div class="container vh-100 ">
         <div class="d-flex justify-content-center align-items-center vh-100 flex-column">
-            <a href="./plus.html"><button type="button" class="btn btn-light buttom">+ ငွေသွင်း/ ငွေလွှဲ</button></a>
-            <a href="ဋ"><button type="button" class="btn btn-light buttom">- ငွေထုတ်</button></a>
+            <a href="./plus.html"><button type="button" class="btn btn-light buttom">Cash In / Cash Out</button></a>
+
 
 
         </div>
