--- a/plus.html
+++ b/plus.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     <link rel="stylesheet" href="./vendor/feather-icons-web/feather.css">
 
     <link rel="stylesheet" href="./css/plus.css">
     <link rel="icon" href="./img/logo.png">
-    <title>Yumm Money +</title>
+    <title>Yumm Money In/Out</title>
 </head>
 
 <body class="body">
@@ -23,7 +24,7 @@
                 <a href="./index.html"><img src="./img/nav-logo.png" class="nav-logo"></a>
             </div>
             <div class="col-6 d-flex justify-content-end align-items-center">
-                <button class="btn alert-info btn-sm shadow" onclick="myFunction()" type="submit">Total</button>
+                <!-- <button class="btn btn-info btn-sm" id="total" type="submit">Total</button> -->
             </div>
         </div>
         <hr class="hr">
@@ -80,55 +81,43 @@
         </form>
 
         <hr class="hr">
+        <!-- Date / Total Btn  -->
 
-        <!-- date  -->
-
-        <p class="mb-3 date"><i class="feather-calendar mr-2"></i><span id="date"></span></p>
+        <div class="d-flex justify-content-between align-content-center mb-2 mt-2">
+            <p class="m-0 date"><i class="feather-calendar mr-2"></i><span id="date"></span></p>
+            <button class="btn btn-info btn-sm text-aligh-right" id="total" type="submit">Total</button>
+        </div>
 
         <!-- Table  -->
         <div class="table-responsive">
-            <!-- <table class="table table-hover" id="table"> -->
+
             <table class="table table-hover" id="sum_table">
                 <thead>
                     <tr>
+                        <th scope="col"><i class="feather-trash-2"></i></th>
                         <th scope="col">Bank Name</th>
                         <th scope="col">Cash In</th>
                         <th scope="col">Cash Out</th>
                         <th scope="col">&#43;</th>
                         <th scope="col">&#8722;</th>
-
                     </tr>
                 </thead>
                 <tbody id="historyList">
-                    <!-- <tr>
-                        <td>Aya</td>
-                        <td>10000</td>
-                        <td>1.5</td>
-                        <td>101500</td>
-                        <td>1500</td>
-                    </tr>
-                    <tr>
-                        <td>Aya</td>
-                        <td>10000</td>
-                        <td>1.5</td>
-                        <td>101500</td>
-                        <td>1500</td>
-                    </tr> -->
+
                 </tbody>
                 <tfoot>
                     <tr class="font-weight-bold">
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td scope="col-1"></td>
+                        <td scope="col-1"></td>
+                        <td scope="col-1"></td>
+                        <td scope="col-1"></td>
+                        <td scope="col-1"></td>
+                        <td scope="col-1"></td>
                     </tr>
 
                 </tfoot>
             </table>
         </div>
-        <!-- <button class="btn alert-info btn-sm shadow" onclick="myFunction()" type="submit">Total</button> -->
-
         <!-- Clear  -->
         <button class="btn btn-danger w-100 clear my-2" id="clear">Clear History <i class="feather-trash-2"></i></button>
     </div>
@@ -138,6 +127,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- jQuery Confirm  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
     <!-- total Amount -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
