--- a/plus.html
+++ b/plus.html
@@ -21,7 +21,7 @@
         <!-- Nav Row  -->
         <div class="row">
             <div class="col-6">
-                <a href="./index.html"><img src="./img/nav-logo.png" class="nav-logo"></a>
+                <a href="./index.html"><img src="./img/nav-logo.png" class="nav-logo" data-tilt data-tilt-startX="20" data-tilt-startY="-20"></a>
             </div>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <!-- <button class="btn btn-info btn-sm" id="total" type="submit">Total</button> -->
@@ -131,6 +131,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
     <!-- total Amount -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- vanilla-tilt.js  -->
+    <script type="text/javascript" src="./vendor/vanilla-tilt.js"></script>
 
     <script src="./js/plus.js"></script>
 
